--- a/index.html
+++ b/index.html
@@ -13,15 +13,40 @@
   <main>
   <div id="circle">
   </div>
-  <div class="poem push-none">
+  <div class="poem ">
     <div class="grid">
-      <p class="unit s-1 m-1 l-1 xl-1">He's a rolling stone</p>
-      <p class="unit s-1 m-1 l-1 xl-1">and its bred</p>
-      <p class="unit s-1 m-1 l-1 xl-1">to the bone</p>
-      <p class="unit s-1 m-1 l-1 xl-1">He's a man</p>
-      <p class="unit s-1 m-1 l-1 xl-1">who wont</p>
-      <p class="unit s-1 m-1 l-1 xl-1">fit in.</p>
+      <p class="unit s-1 m-1 l-1 xl-1 push-none">He's a rolling stone</p>
+      <p class="unit s-1 m-1 l-1 xl-1 push-none">and its bred</p>
+      <p class="unit s-1 m-1 l-1 xl-1 push-none">to the bone</p>
+      <p class="unit s-1 m-1 l-1 xl-1 push-none">He's a man</p>
+      <p class="unit s-1 m-1 l-1 xl-1 push-none">who wont</p>
+      <p class="unit s-1 m-1 l-1 xl-1 push-none">fit in.</p>
     </div>
+      <ol class="grid grid-stretch gutter-1-4">
+        <li class="unit unit xs-1 s-1 m-1-3 l-3 island-1-4 unit-content-distribute">
+          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
+            <p class="content-fill push-0 pad-b-1-2 mega">He's a rolling stone</p>
+          </div>
+        </li>
+        <li class="unit unit xs-1 s-1 m-2-3 2-3 island-1-4 unit-content-distribute">
+          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
+            <p class="content-fill push-0 pad-b-1-2 yotta">and its bred</p>
+          </div>
+        </li>
+        <li class="unit unit xs-1 s-1 m-1-2 l-2 island-1-4 unit-content-distribute">
+          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
+            <p class="content-fill push-0 pad-b-1-2">to the bone</p>
+          </div>
+        </li>
+        <li class="unit unit xs-1 s-1 m-1-2 l-2 island-1-4 unit-content-distribute">
+          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
+
+            <p class="content-fill push-0 pad-b-1-2">He's a man</p>
+          </div>
+        </li>
+      </ol>
+    </div>
+
   </div>
 </main>
 </div>
