Push another draft of the css and html

--- a/index.html
+++ b/index.html
@@ -7,45 +7,54 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Montserrat" rel="stylesheet">
 
 </head>
 <body>
   <main>
   <div id="circle">
   </div>
-  <div class="poem ">
-    <div class="grid">
-      <p class="unit s-1 m-1 l-1 xl-1 push-none">He's a rolling stone</p>
-      <p class="unit s-1 m-1 l-1 xl-1 push-none">and its bred</p>
-      <p class="unit s-1 m-1 l-1 xl-1 push-none">to the bone</p>
-      <p class="unit s-1 m-1 l-1 xl-1 push-none">He's a man</p>
-      <p class="unit s-1 m-1 l-1 xl-1 push-none">who wont</p>
-      <p class="unit s-1 m-1 l-1 xl-1 push-none">fit in.</p>
+  <div>
+    <div class="overlap grid">
+      <div>
+        <p class="yotta alfa row-1 unit s-2-3 m-2-3 l-2-3 xl-2-3">HE'S</p>
+        <p class="mont mont-row-1 unit s-1-3 m-1-3 l-1-3 xl-2-3">a rolling stone</p>
+      </div>
     </div>
-      <ol class="grid grid-stretch gutter-1-4">
-        <li class="unit unit xs-1 s-1 m-1-3 l-3 island-1-4 unit-content-distribute">
-          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
-            <p class="content-fill push-0 pad-b-1-2 mega">He's a rolling stone</p>
-          </div>
-        </li>
-        <li class="unit unit xs-1 s-1 m-2-3 2-3 island-1-4 unit-content-distribute">
-          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
-            <p class="content-fill push-0 pad-b-1-2 yotta">and its bred</p>
-          </div>
-        </li>
-        <li class="unit unit xs-1 s-1 m-1-2 l-2 island-1-4 unit-content-distribute">
-          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
-            <p class="content-fill push-0 pad-b-1-2">to the bone</p>
-          </div>
-        </li>
-        <li class="unit unit xs-1 s-1 m-1-2 l-2 island-1-4 unit-content-distribute">
-          <div class="card island-1-2 push-1-2 unit-content-distribute content-fill">
+    <div>
+      <div class="between">
+        <p>and it's</p>
+      </div>
+    </div>
+    <div class="overlap">
+      <div class="alfa row-2">
+        <p class="yotta">BONE</p>
+      </div>
+      <div class="mont row-2">
+        <p>bred to the</p>
+      </div>
+    </div>
+    <div class="overlap">
+      <div class="alfa row-3">
+        <p class="yotta">He's</p>
+      </div>
+      <div class="mont row-3">
+        <p>a man</p>
+      </div>
+    </div>
+    <div class="overlap">
+      <div class="alfa row-4">
+        <p class="yotta">Fit in</p>
+      </div>
+      <div class="mont row-4">
+        <p>who won't</p>
+      </div>
+    </div>
 
-            <p class="content-fill push-0 pad-b-1-2">He's a man</p>
-          </div>
-        </li>
-      </ol>
-    </div>
+
+
+
+
 
   </div>
 </main>
