--- a/index.html
+++ b/index.html
@@ -12,13 +12,47 @@
 </head>
 <body>
   <main>
-  <div id="circle">
-  </div>
-  <div>
-    <div class="overlap grid">
+    <div class="grid">
+      <div class="unit unit-content-center-vertical unit-xs-1 s-1 m-1 l-1 first-line circle">
+        <p class="push-0 unit-content-center pad-t-2"> >:O</p>
+      </div>
+    </div>
+    <div class="grid grid-bottom">
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="alfa zetta text-upper push-0">He's</p>
+      </div>
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="mont"> a rolling stone</p>
+      </div>
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="mont">and it's bred to the bone</p>
+      </div>
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="alfa zetta text-upper push-0">Bone</p>
+      </div>
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="alfa zetta text-upper push-0">He's</p>
+      </div>
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="mont"> a man</p>
+      </div>
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="mont">who won't</p>
+      </div>
+      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="alfa zetta text-upper push-0">Fit in</p>
+      </div>
+    </div>
+
+
+
+
+
+  <!--<div>
+    <div class="overlap grid grid-middle">
       <div>
-        <p class="yotta alfa row-1 unit s-2-3 m-2-3 l-2-3 xl-2-3">HE'S</p>
-        <p class="mont mont-row-1 unit s-1-3 m-1-3 l-1-3 xl-2-3">a rolling stone</p>
+        <div class="alfa row-1 unit unit-l-1-3 content-fill yotta">HE'S</div>
+        <div class="mont mont-row-1 unit unit-l-2-3 exa">a rolling stone</div>
       </div>
     </div>
     <div>
@@ -56,7 +90,7 @@
 
 
 
-  </div>
+  </div>-->
 </main>
 </div>
 </body>
