Be the first draft were there is an animation and a grid in place

--- a/index.html
+++ b/index.html
@@ -17,30 +17,31 @@
         <p class="push-0 unit-content-center pad-t-2"> >:O</p>
       </div>
     </div>
-    <div class="grid grid-bottom">
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="alfa zetta text-upper push-0">He's</p>
+    <div class="grid grid-middle">
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2 unit-push-xs-1-4">
+        <p class="alfa zetta push-0">He's</p>
       </div>
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="mont"> a rolling stone</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2 unit-pull-xs-1-4">
+        <p class="mont push-0">a <i>rolling stone</i></p>
       </div>
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="mont">and it's bred to the bone</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="mont push-0">and it's</p>
+        <p class="mont push-0"><i>bred</i> to the</p>
       </div>
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="alfa zetta text-upper push-0">Bone</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="alfa zetta">Bone</p>
       </div>
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="alfa zetta text-upper push-0">He's</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="alfa zetta push-0">He's</p>
       </div>
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="mont"> a man</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="mont push-0"> a man</p>
       </div>
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="mont">who won't</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="mont push-0">who <i>won't</i></p>
       </div>
-      <div class="unit unit-xs-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="alfa zetta text-upper push-0">Fit in</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
+        <p class="alfa zetta push-0">Fit in</p>
       </div>
     </div>
 
