Push an updated version of the html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
         <p class="mont push-0">and it's</p>
-        <p class="mont push-0"><i>bred</i> to the</p>
+        <p class="mont push-0"><i>bred</i> in the</p>
       </div>
       <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
         <p class="alfa zetta">Bone</p>
