Contain corrections to errors found by markbot

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>The Men That Don't Fit In -Robert Service</title>
-  <link href="css/type.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Montserrat" rel="stylesheet">
 
@@ -14,6 +15,7 @@
   <main>
     <div class="grid">
       <div class="unit unit-content-center-vertical unit-xs-1 s-1 m-1 l-1 first-line circle">
+        <h1>The Men Who Wont Fit In</h1>
         <p class="push-0 unit-content-center pad-t-2"> >:O</p>
       </div>
     </div>
