Have some new corrections to html and css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="grid">
       <div class="unit unit-content-center-vertical unit-xs-1 s-1 m-1 l-1 first-line circle">
         <h1>The Men Who Wont Fit In</h1>
-        <p class="push-0 unit-content-center pad-t-2"> >:O</p>
+        <p class="push-0 unit-content-center pad-t-2"> &gt;&#58;O</p>
       </div>
     </div>
     <div class="grid grid-middle">
@@ -46,6 +46,6 @@
         <p class="alfa zetta push-0">Fit in</p>
       </div>
     </div>
-</main>
+  </main>
 </body>
 </html>
