contain a polished draft of the html and css

--- a/index.html
+++ b/index.html
@@ -15,35 +15,34 @@
   <main>
     <div class="grid">
       <div class="unit unit-content-center-vertical unit-xs-1 s-1 m-1 l-1 first-line circle">
-        <h1>The Men Who Wont Fit In</h1>
         <p class="push-0 unit-content-center pad-t-2"> &gt;&#58;O</p>
       </div>
     </div>
-    <div class="grid grid-middle">
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2 unit-push-xs-1-4">
-        <p class="alfa zetta push-0">He's</p>
+    <div class="grid grid-middle island">
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4 unit-push-xs-1-4">
+        <h1 class="alfa exa push-0">He's</h1>
       </div>
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2 unit-pull-xs-1-4">
-        <p class="mont push-0">a <i>rolling stone</i></p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4 unit-pull-xs-1-4">
+        <p class="mont mega push-0">a <i>rolling stone</i></p>
       </div>
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="mont push-0">and it's</p>
-        <p class="mont push-0"><i>bred</i> in the</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4">
+        <p class="mont mega push-0">and it's</p>
+        <p class="mont mega push-0"><i>bred</i> in the</p>
       </div>
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="alfa zetta">Bone</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4 bone">
+        <p class="alfa exa push-0">Bone</p>
       </div>
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="alfa zetta push-0">He's</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4">
+        <p class="alfa exa pad-t push-0">He's</p>
       </div>
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="mont push-0"> a man</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4">
+        <p class="mont mega push-0"> a man</p>
       </div>
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="mont push-0">who <i>won't</i></p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4">
+        <p class="mont mega push-0">who <i>won't</i></p>
       </div>
-      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-2">
-        <p class="alfa zetta push-0">Fit in</p>
+      <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4">
+        <p class="alfa exa push-0">Fit in</p>
       </div>
     </div>
   </main>
