--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 </head>
 <body>
   <main>
+    <!--Grouchy Rolling Stone Animation
+
     <div class="grid">
       <div class="unit unit-content-center-vertical unit-xs-1 s-1 m-1 l-1 first-line circle">
         <p class="push-0 unit-content-center pad-t-2"> &gt;&#58;O</p>
       </div>
     </div>
+    -->
+
     <div class="grid grid-middle island">
       <div class="unit unit-s-content-center unit-xs-1 s-1 m-1-2 l-1-4 unit-push-xs-1-4">
         <h1 class="alfa exa push-0">He's</h1>
